--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,18 @@ charset-normalizer==3.4.4
 check50==3.4.0
 cryptography==46.0.5
 idna==3.11
+iniconfig==2.3.0
 jellyfish==1.2.1
 Jinja2==3.1.6
 lib50==3.2.1
 MarkupSafe==3.0.3
 packaging==26.0
 pexpect==4.9.0
+pluggy==1.6.0
 ptyprocess==0.7.0
 pycparser==3.0
+Pygments==2.19.2
+pytest==9.0.2
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
